Added filter with options enum