@@ -2,11 +2,11 @@ package com.storage.service.facade;
 
 import com.storage.dao.BrandFileStorage;
 import com.storage.dao.SouvenirFileStorage;
-import com.storage.model.entity.Brand;
 import com.storage.model.entity.Souvenir;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class StorageFacade {
@@ -21,28 +21,23 @@ public class StorageFacade {
 
     public Souvenir saveSouvenir(
             final Souvenir souvenir) {
-        Souvenir saved = souvenirStorage
-                .saveToCsv(souvenir);
-        Brand brandSet = brandStorage.saveToCsv(souvenir.getBrand());
-        saved.setBrand(brandSet);
-        return saved;
+        souvenir.setBrand(brandStorage
+                .saveToCsv(souvenir.getBrand()));
+        return souvenirStorage.saveToCsv(souvenir);
     }
 
     public Souvenir editSouvenir(
             final Souvenir souvenir) {
-        return souvenirStorage
-                .updateCsv(souvenir);
+        return souvenirStorage.updateCsv(souvenir);
     }
 
     public void delete(
             final String name) {
-        souvenirStorage
-                .deleteFromCsv(name);
+        souvenirStorage.deleteFromCsv(name);
     }
 
     public List<Souvenir> findAllSouvenirs() {
-        return souvenirStorage
-                .readFromCsv(SOUVENIR_PATH);
+        return souvenirStorage.readFromCsv(SOUVENIR_PATH);
     }
 
     public List<Souvenir> findAllSouvenirsByBrand(
@@ -54,7 +49,7 @@ public class StorageFacade {
                         .getBrand()
                         .getName()
                         .equalsIgnoreCase(name))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<Souvenir> findAllSouvenirsByYear(
@@ -75,10 +70,10 @@ public class StorageFacade {
         return souvenirStorage
                 .readFromCsv(SOUVENIR_PATH)
                 .stream()
-                .filter(souvenir -> souvenir
-                        .getBrand()
-                        .getCountry()
-                        .equalsIgnoreCase(country))
+                .filter(souvenir ->
+                        souvenir.getBrand()
+                                .getCountry()
+                                .equalsIgnoreCase(country))
                 .toList();
     }
 
